@@ -656,6 +656,21 @@ class View(AbstractView):
         raise HTTPMethodNotAllowed(self.request.method, allowed_methods)
 
 
+class ResourcesView(Sized, Iterable, Container):
+
+    def __init__(self, resources):
+        self._resources = resources
+
+    def __len__(self):
+        return len(self._resources)
+
+    def __iter__(self):
+        yield from self._resources
+
+    def __contains__(self, resource):
+        return resource in self._resources
+
+
 class RoutesView(Sized, Iterable, Container):
 
     def __init__(self, resources):
@@ -718,6 +733,9 @@ class UrlDispatcher(AbstractRouter, collections.abc.Mapping):
 
     def __getitem__(self, name):
         return self._named_resources[name]
+
+    def resources(self):
+        return ResourcesView(self._resources)
 
     def routes(self):
         return RoutesView(self._resources)
